--- a/experiencia.html
+++ b/experiencia.html
@@ -17,11 +17,12 @@
   </ul>
   <h3>Experiencia</h3>
 
-    <h3>Video - One Story of Big </h3>
+    <h3>Video - Habilidades e Intereses Profesionales </h3>
     <p>
       <video src="media/video_crizu.mp4" controls  width="500px" weight="200px">  </video>
       <br>
-      <audio src="media/chinoynacho.mp3" controls></audio>
+      <h3>Audio - Hobbies y Actividades Recreacionales </h3>
+      <audio src="media/hobbies.mp3" controls></audio>
 </p>
       @Derechos Reservados
   <footer>
